--- a/frontWeb/src/main/webapp/a05_cssBasic/a06_outerCssFile.html
+++ b/frontWeb/src/main/webapp/a05_cssBasic/a06_outerCssFile.html
@@ -22,7 +22,10 @@
 		2. css 스타일 시트파일을 불러오는 두가지 방법
 			1)link 태그 이용
 				head
-					link href="파일명.css" type="text/css" rel="stylesheet = ""
+					link href="파일명.css" type="text/css" rel="stylesheet
+					ex) hr
+					서버가 호출되었을 때, default 위치인 context명으로 설정 (웹서버단에서 설정-보통 프로젝트명으로 default설정 됨)
+					
 					
 			2) @import 이용
 				style
