--- a/frontWeb/src/main/webapp/a05_cssBasic/a17_selector_prop.html
+++ b/frontWeb/src/main/webapp/a05_cssBasic/a17_selector_prop.html
@@ -13,7 +13,8 @@
                 ex) *{color:green;}
                     모든 태그의 글자 색상을 초록색으로 처리
                     div p > *{background-color:yellow;}
-                    div 하위의 p태그를 부모객체로 하고있는 모든 객체의 배경색상을 노란색으로 처리
+	                    특정한 선택자 하위에 있는 모든 요소객체
+	                    div 하위의 p태그를 부모객체로 하고있는 모든 객체의 배경색상을 노란색으로 처리
         2. 속성 선택자(property selector)
             1) html 태그의 속성에 대해 값이 일치하는 태그를 스타일로 적용하는 선택자를 말한다.
                 태그명 속성 = 속성값 ( class="", id="" )
