--- a/frontWeb/src/main/webapp/a05_cssBasic/a10_sel_class_id.html
+++ b/frontWeb/src/main/webapp/a05_cssBasic/a10_sel_class_id.html
@@ -11,6 +11,8 @@
 			2) 그룹의 css적용이 필요할 때, 활용된다.
 			3) 태그에서는 class="클래스명1 클래스명2"
 				상위에 선언된 클래스를 여러가지 적용할 수 있다.
+				ps) class 와 body화면 적용은 다대다 관계로 설정이 가능하다. 하나의 클래스 선언 => body에서 여러곳에 호출
+				body에서 하나의 태그에서 여러개의 클래스 선언. class = "클래스1 클래스2 클래스3 ..."
 		2. 아이디 선택자
 			1) #아이디명으로 선택자를 선언하여 속성/속성명을 설정
 			2) 하나의 페이지에 유일한 식별자로, 하나만 적용할 때 활용.
