--- a/frontWeb/src/main/webapp/a05_cssBasic/a12_muliSelector.html
+++ b/frontWeb/src/main/webapp/a05_cssBasic/a12_muliSelector.html
@@ -9,11 +9,14 @@
 		1. 여러 선택자를 동일 속성/속성값으로 지정.
 			선택1, 선택2, 선택3{속성:속성값;}
 		2. 조합해서 선택자 처리
-			1) 요소에서 속성의 선택자가 있을 때.
+			1) 요소에서 속성의 선택자가 있을 때. (두 가지 이상의 선택자가 and로 연결)
 				h1태그에서 class가 cls01인 경우, 속성:속성값;
 					h1.cls01{color:red;}
 			2) 계층구조상 포함된 상위 걔층을 가지고 있는 선택자
-				div > p > h1
+				부모 > 자식
+				조상 후손 : 위 부모 > 자식 관계를 포함하며 계층 레벨 상관없이 적용
+				
+				div > p > h1 (3가지 조건이 다 계층구조로 맞고, 마지막에 선언된 h1에 적용)
 				적용은 결국 h1 상위 바로 위 부모가 div, p일 때 
 					table.cls01 td
 					테이블 중 class명 cls01이 걔층레벨 상관없이 td인 태그에 대한 적용
