--- a/frontWeb/src/main/webapp/a06_cssMiddle/a07_shadow.html
+++ b/frontWeb/src/main/webapp/a06_cssMiddle/a07_shadow.html
@@ -15,6 +15,7 @@
             3. 속성값
                 h-shadow/v-shadow 수평그림자 수직그림자 위치 지정
                     원본 텍스트와 그림자 텍스트 사이의 수평/수직 거리(필수)
+                    해당 text의 오른쪽 하단 꼭지점을 기준으로 그림자 위치를 지정.
                 blur-radius: 흐릿한 그림자를 만드는 효과로 흐릿하게 번지는 길이(선택)
                 color: 그림자 색(선택)
                 none: 그림자 효과 없음
