--- a/frontWeb/src/main/webapp/a10_javascript/a02_function/a09_setInterval.html
+++ b/frontWeb/src/main/webapp/a10_javascript/a02_function/a09_setInterval.html
@@ -9,7 +9,9 @@
         1. var set01 = setTimeout(function(){
 
             clearTime(set01);  // 자원해제
-        },5000) 
+        },5000)
+        ps) setTimeout/setInterval을 수행 시, 반드시 특정한 시점에서 변수를 선언한 내용을 가지고
+        자원을 clearTimeout(변수명), clearInterval(변수명)으로 자원을 해제하여야 원활하게 브라우저 화면이 작동함.
         */
         var h2Ob = document.querySelector("h2");
         var set01 = setTimeout(function(){
