--- a/frontWeb/src/main/webapp/a10_javascript/a02_function/a10_setInterval.html
+++ b/frontWeb/src/main/webapp/a10_javascript/a02_function/a10_setInterval.html
@@ -14,12 +14,49 @@
             h3Arr[idx].innerText = idx+1+") 안녕하세요";
             idx++;
             if(idx == 7){
+                
                 clearInterval(in01);
             }
         },1000);
+
+        function start(){
+            var tdArr = document.querySelectorAll("td");
+            // td의 모든 내용을 객체로 정의
+            // setInterval(반복할 함수, 반복할시간단위1/1000)
+            var int01 = setInterval(()=>{
+
+                // 배열.forEach()
+                // 해당 DOM객체의 모든 내용을 배경색상을 흰색으로 처리(반복시 마다 흰색을 처리하기 위해)
+                tdArr.forEach(function(ob,idx){
+                    // ob : 각각의 td를 지칭
+                    ob.style.background="white";
+                })
+
+                // Math.floor() : 실수데이터 절삭처리
+                // Math.random() * 경우의 수 9가지 0~8
+                // table의td cell을 index로 지정하여 임의로 색상을 처리하기 위해
+                var rIdx = Math.floor(Math.random()*9);
+                tdArr[rIdx].style.background="yellow";
+                tdArr[rIdx].onclick=function(){
+                    alert("종료!");
+                    // 클릭 시, clearInterval(변수명)
+                    // 1. 반복을 중지
+                    // 2. 메모리 해제
+                    clearInterval(int01);
+                }
+            },500);
+        }
+
     </script>
 </head>
 <body>
+    <h2 onclick="start()">시작</h2>
+    <table width="300" height="300" border>
+        <tr><td></td><td></td><td></td></tr>
+        <tr><td></td><td></td><td></td></tr>
+        <tr><td></td><td></td><td></td></tr>
+    </table>
+
     <h3>태그1</h3>
     <h3>태그2</h3>
     <h3>태그3</h3>
