--- a/frontWeb/src/main/webapp/a10_javascript/a02_function/a18_JSON.html
+++ b/frontWeb/src/main/webapp/a10_javascript/a02_function/a18_JSON.html
@@ -23,8 +23,8 @@
             h5Arr[0].innerText = JSON.stringify(p02)
         }
         function chObj01(){
-            var strObj = `[{"empno":7780,"enmae":"홍길동"},
-            {"empno":7790,"enmae":"김길동"}]`
+            var strObj = `[{"empno":7780,"ename":"홍길동"},
+            {"empno":7790,"ename":"김길동"}]`
             console.log(strObj+":"+typeof(strObj))
             var obj = JSON.parse(strObj)
             var h3Arr = document.querySelectorAll("h3")
